--- a/ysh-app/www/templates/checkout.html
+++ b/ysh-app/www/templates/checkout.html
@@ -5,7 +5,7 @@
 		<div class="item item-divider ">
 			<span>厂商直接发货，100%正品保证</span>
 		</div>
-		<div class="item list">
+		<div class="item list ysh-no-padding">
 			<ion-item ng-repeat="item in checkoutItems" class="ysh-checkout-item">
 						<div class="row" style="padding : 0px">
 							<div class="col col-25">
