added new pages and changed layout

--- a/ysh-app/www/templates/main.html
+++ b/ysh-app/www/templates/main.html
@@ -1,4 +1,4 @@
-<ion-view view-title="云商汇" class="ysh-show-top">
+<ion-view view-title="{{logo}}" class="ysh-show-top">
  <ion-tabs class="tabs-calm tabs-top">
 
   <ion-tab title="新品上市">
