--- a/ysh-app/www/templates/ware.html
+++ b/ysh-app/www/templates/ware.html
@@ -47,7 +47,7 @@
 	<ion-footer-bar>
 		<div class="button-bar">
 				<button class="button button-calm icon ion-bag" ng-click="goCheckout()">我要购买</button>
-				<button class="button button-stable icon ion-person" ng-click="goApply()">我要代理</button>
+				<button class="button button-stable icon ion-person" ng-click="showDealerTeaser()">我要代理</button>
 		</div>
 	</ion-footer-bar>
 </ion-view>
