--- a/ysh-app/www/templates/menu.html
+++ b/ysh-app/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable bar-calm">
+    <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
 		返回
       </ion-nav-back-button>
