--- a/ysh-app/www/templates/dealership/survey1.html
+++ b/ysh-app/www/templates/dealership/survey1.html
@@ -1,5 +1,5 @@
 <ion-view view-title="代理申请">
         <ion-content class="padding">
-		  <button class="button" ng-click="cancel()">终止</button>
+		  <button class="button" ng-click="cancel()">返回</button>
         </ion-content>
 </ion-view>
