--- a/ysh-app/www/css/style.css
+++ b/ysh-app/www/css/style.css
@@ -7,6 +7,10 @@ span.bold, .tab-title, .bar .title{
 	font-weight: bolder;
 }
 
+.bar .title.header-item{
+	text-align:center;
+}
+
 ion-item  img.ysh-ad{
 	max-width:100%;
 }
