--- a/ysh-app/www/templates/dealership/survey.html
+++ b/ysh-app/www/templates/dealership/survey.html
@@ -1,4 +1,4 @@
-<ion-nav-bar class="bar-stable bar-calm">
+<ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
 </ion-nav-bar>
