--- a/ysh-app/www/templates/menu.html
+++ b/ysh-app/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-stable" align-title="center">
       <ion-nav-back-button>
 		返回
       </ion-nav-back-button>
@@ -18,7 +18,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable bar-calm">
+    <ion-header-bar class="bar-stable bar-calm" align-title="center">
       <h1 class="title">频道</h1>
     </ion-header-bar>
     <ion-content>
@@ -36,7 +36,7 @@
     </ion-content>
   </ion-side-menu>
   <ion-side-menu side="right">
-    <ion-header-bar class="bar-stable bar-calm">
+    <ion-header-bar class="bar-stable bar-calm" align-title="center">
       <h1 class="title">搜索</h1>
     </ion-header-bar>
 		<ion-content search-panel>
