--- a/ysh-app/www/templates/ware.html
+++ b/ysh-app/www/templates/ware.html
@@ -1,5 +1,5 @@
 <ion-view>
-	<ion-nav-title>{{currentWare}}</ion-nav-title>
+	<ion-nav-title>{{title}}</ion-nav-title>
 	<ion-nav-buttons side="right">
 		<button class="button button-icon button-clear ion-share" ng-click="callSharePlugin()"></button>
 	</ion-nav-buttons>
@@ -15,12 +15,12 @@
 			</ion-slide-box>
 		</div>
 		<div class="item item-text-wrap item-divider">
-			<p>商品详细名称</p>
-			<p>商品专柜价格 <span class="ysh-ware-price">￥12</span></p>
+			<p>{{ware.title}}</p>
+			<p>商品专柜价格 <span class="ysh-ware-price">￥{{ware.price}}</span></p>
 			<div class="ysh-icon ysh-provider-icon"></div>
 			<button class="button button-full button-small button-clear button-dark icon-right ion-chevron-right" ng-click="showCert()">
 				<span class="ysh-small-font">
-					云商汇上线商品均由厂家直接发货，查看
+					本产品将由厂家直接发货，查看资格认证
 				</span>
 			</button>
 		</div>
