--- a/ysh-app/www/templates/menu.html
+++ b/ysh-app/www/templates/menu.html
@@ -10,7 +10,7 @@
         </button>
       </ion-nav-buttons>
 	  <ion-nav-buttons side="right">
-        <button class="button button-icon button-clear ion-search" menu-toggle="right">
+        <button class="button button-icon button-clear ion-search" menu-toggle="right" ng-click="toggleSearch()">
 		</button>
       </ion-nav-buttons>
     </ion-nav-bar>
@@ -37,7 +37,7 @@
   </ion-side-menu>
   <ion-side-menu side="right">
     <ion-header-bar class="bar-stable bar-calm" align-title="center">
-      <h1 class="title">搜索</h1>
+      <h1 class="title">搜索商品</h1>
     </ion-header-bar>
 		<ion-content search-panel>
     </ion-content>
