--- a/ysh-app/www/templates/main.html
+++ b/ysh-app/www/templates/main.html
@@ -2,20 +2,20 @@
  <ion-tabs class="tabs-calm tabs-top">
 
   <ion-tab title="新品上市">
-	<ion-content>
+	<ion-content lazy-scroll>
 		<ion-list>
 			<ion-item ng-repeat="ad in newAds|orderBy:'id'">
-				<img class="ysh-ad" ng-src="{{ad.pic}}">
+				<img class="ysh-ad" image-lazy-src="{{ad.pic}}" ng-src="img/ad_default.png">
 			</ion-item>
 		</ion-list>
 	</ion-content> 
   </ion-tab>
 	
   <ion-tab title="热销商品">
-	<ion-content>
+	<ion-content lazy-scroll>
 		<ion-list>
 			<ion-item ng-repeat="ad in hotAds|orderBy:'id'">
-				<img class="ysh-ad" ng-src="{{ad.pic}}">
+				<img class="ysh-ad" image-lazy-src="{{ad.pic}}" ng-src="img/ad_default.png">
 			</ion-item>
 		</ion-list>
 	</ion-content> 
