--- a/ysh-app/www/templates/dealerteaser.html
+++ b/ysh-app/www/templates/dealerteaser.html
@@ -9,7 +9,7 @@
 			</div>
 
 			<div class="item item-divider item-body">
-				<div class="ysh-default-image">
+				<div class="ysh-image">
 					<img class="full-image" src="img/wares/w_03.jpg">
 				</div>
 				<p>
