--- a/ysh-app/www/templates/menu.html
+++ b/ysh-app/www/templates/menu.html
@@ -1,7 +1,7 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable" align-title="center">
-      <ion-nav-back-button>
+      <ion-nav-back-button ng-click="goBack()">
 		返回
       </ion-nav-back-button>
 
@@ -10,11 +10,12 @@
         </button>
       </ion-nav-buttons>
 	  <ion-nav-buttons side="right">
-        <button class="button button-icon button-clear ion-search" menu-toggle="right" ng-click="toggleSearch()">
+        <button class="button button-icon button-clear ion-search" ng-click="openSearch()">
 		</button>
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
+	<ysh-overlay-controls/>
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
@@ -30,16 +31,9 @@
 			<span class="bold">{{channel.title}}</span>
 		</ion-item>
         <ion-item nav-clear menu-close ng-click="login()">
-          登录
+          我的
         </ion-item>
       </ion-list>
-    </ion-content>
-  </ion-side-menu>
-  <ion-side-menu side="right">
-    <ion-header-bar class="bar-stable bar-calm" align-title="center">
-      <h1 class="title">搜索商品</h1>
-    </ion-header-bar>
-		<ion-content search-panel>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
