--- a/ysh-app/www/templates/menu.html
+++ b/ysh-app/www/templates/menu.html
@@ -15,7 +15,7 @@
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
-	<ysh-overlay-controls/>
+	<ysh-overlay-controls ng-if="showControls"/>
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
