--- a/ysh-app/www/templates/login.html
+++ b/ysh-app/www/templates/login.html
@@ -1,25 +1,49 @@
 <ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">用户登录</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">关闭</button>
-    </div>
+  <ion-header-bar class="bar-stable">
+	<div class="ysh-header-tab">
+		<div class="button-bar">
+			<a class="button" ng-class="{'button-calm' : toggleLogin}" ng-click="showLogin()">登录</a>
+			<a class="button" ng-class="{'button-calm' : !toggleLogin}" ng-click="showSignin()">注册</a>
+		</div>
+	</div>
+	<div class="ysh-right-buttons">
+		<button class="button button-clear" ng-click="closeLogin()">关闭</button>
+	</div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="doLogin()">
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">用户名</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">密码</span>
-          <input type="password" ng-model="loginData.password">
-        </label>
-        <label class="item">
-          <button class="button button-small button-block button-calm" type="submit">登录</button>
-        </label>
-      </div>
-    </form>
+	<div id="login" ng-if="toggleLogin">
+		<form ng-submit="doLogin()">
+		  <div class="list">
+			<label class="item item-input">
+			  <span class="input-label">账号</span>
+			  <input type="email" placeholder="手机号码或邮箱" ng-model="loginData.username">
+			</label>
+			<label class="item item-input">
+			  <span class="input-label">密码</span>
+			  <input type="password" placeholder="登录密码" ng-model="loginData.password">
+			</label>
+			<label class="item">
+			  <button class="button button-block button-calm" type="submit">立刻登录</button>
+			</label>
+		  </div>
+		</form>	
+	</div>
+	<div id="signin" ng-if="!toggleLogin">
+		<form ng-submit="doSignin()">
+		  <div class="list">
+			<label class="item item-input">
+			  <span class="input-label">账号</span>
+			  <input type="email" placeholder="手机号码或邮箱" ng-model="loginData.username">
+			</label>
+			<label class="item item-input">
+			  <span class="input-label">密码</span>
+			  <input type="password" placeholder="6-20位字母、数字组合" ng-model="loginData.password">
+			</label>
+			<label class="item">
+			  <button class="button button-block button-royal" type="submit">立刻注册</button>
+			</label>
+		  </div>
+		</form>	
+	</div>
   </ion-content>
 </ion-modal-view>
