--- a/ysh-app/www/templates/member/main.html
+++ b/ysh-app/www/templates/member/main.html
@@ -1,5 +1,5 @@
-<ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+<ion-nav-bar class="bar-stable" align-title="center">
+	<ion-nav-back-button>
+    </ion-nav-back-button>
 </ion-nav-bar>
 <ion-nav-view name="memberContent"></ion-nav-view>
