--- a/ysh-app/www/templates/member/main.html
+++ b/ysh-app/www/templates/member/main.html
@@ -1,5 +1,7 @@
-<ion-nav-bar class="bar-stable" align-title="center">
-	<ion-nav-back-button>
-    </ion-nav-back-button>
-</ion-nav-bar>
-<ion-nav-view name="memberContent"></ion-nav-view>
+﻿ <ion-view view-title="个人中心">
+  <ion-nav-buttons side="right">
+  </ion-nav-buttons>
+  <ion-content class="">
+	个人中心
+  </ion-content>
+</ion-view>
